# Data-Mining

./: .gitattributes  .gitignore  .pylintrc  CodeConvention.MD  README.md  alg.txt  first_steps.ipynb  poetry.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: hpc.yml  hpcyml  python-package.yml
.openvpn/: TUD_Tunnel-Full_UDP_Linux.ovpn  vpn.ovpn
HPC_Processing/: __init__.py  base_loader.py  loader.py  method_types.py  top_k.py
cl_res/: dbscan_centers.csv  kmeans_3_centers.csv  kmeans_4_centers.csv  kmeans_5_centers.csv  optics_centers.csv  spec_3_cnt.csv  spec_4_cnt.csv  spec_5_cnt.csv
documents/: CodeConvention.md  data_analysis.md  poetry.md  working_steps.md
documents/evaluation_strategies/: evaluation_strategies.md
documents/meetings/: meeting_01.md  meeting_02.md  meeting_04.md  meeting_05.md  meetings_history.md
kp_test/: 00_config.yaml  02_slurm.slurm  02b_chain_job.sh  03_tar.slurm  04_sync_and_run.sh  05_started_oom_workloads.csv.xz  0x_update_deps.slurm
kp_test/_AVERAGE_UNCERTAINTY/: Iris.npz  seeds.npz  wine_origin.npz
kp_test/_CLOSENESS_TO_CLUSTER_CENTER/: Iris.npz  seeds.npz  wine_origin.npz
kp_test/_CLOSENESS_TO_DECISION_BOUNDARY/: Iris.npz  seeds.npz  wine_origin.npz
kp_test/_CLOSENESS_TO_SAMPLES_OF_OTHER_CLASS/: Iris.npz  seeds.npz
kp_test/_CLOSENESS_TO_SAMPLES_OF_OTHER_CLASS_kNN/: Iris.npz  seeds.npz  wine_origin.npz
kp_test/_CLOSENESS_TO_SAMPLES_OF_SAME_CLASS/: wine_origin.npz
kp_test/_CLOSENESS_TO_SAMPLES_OF_SAME_CLASS_kNN/: Iris.npz  seeds.npz  wine_origin.npz
kp_test/_COUNT_WRONG_CLASSIFICATIONS/: Iris.npz  seeds.npz  wine_origin.npz
kp_test/_IMPROVES_ACCURACY_BY/: Iris.npz  seeds.npz  wine_origin.npz
kp_test/_INCLUDED_IN_OPTIMAL_STRATEGY/: wine_origin.npz
kp_test/_MELTING_POT_REGION/: Iris.npz  seeds.npz  wine_origin.npz
kp_test/_OUTLIERNESS/: Iris.npz  seeds.npz  wine_origin.npz
kp_test/_REGION_DENSITY/: Iris.npz  seeds.npz  wine_origin.npz
kp_test/_SWITCHES_CLASS_OFTEN/: Iris.npz  seeds.npz  wine_origin.npz
kp_test/cluster_results/: dbscan_centers.csv  gaussian_mixture_centers.csv  kmeans_4centers.csv  optics_clustering_all_metrics.csv  spectral_clustering_4centers.csv
kp_test/datasets/: Iris_split.csv  ThinCross.csv  appendicitis.csv  banana.csv  breast_cancer_wisconsin_original.csv  breast_cancer_wisconsin_original_split.csv  diabetes.csv  ex8a.csv  ex8b.csv  gaussian_balanced.csv  gaussian_unbalanced.csv  glass.csv  haberman.csv  ionosphere.csv  mammographic.csv  musk1.csv  parkinsons.csv  phishing.csv  phoneme.csv  r15.csv  ringnorm.csv  seeds_split.csv  sonar.csv  spambase.csv  splice_junction_split.csv  statlog_australian.csv  statlog_germany.csv  tic_tac_toe.csv  (+9 more)
logs/: app.log.1  app.log.2
meetings/: agenda.md  project_ideas.md
new/: 01_workload.csv  __init__.py  abfuck.py  test.py
project_code/: cluster.py  data.py  data_processing.py  main.py
remake/: main.py
src/: main.py  preprocessing.py
(+8535 files in other folders)
